fix mouse flickering when hovering on certain icons; adjust the dialog header to center alignment

--- a/style/components/dialog.scss
+++ b/style/components/dialog.scss
@@ -2,6 +2,10 @@
 
 .b3-dialog--open {
     .b3-dialog {
+        &__header {
+            text-align: center;
+        }
+
         &.emojis-container {
 
             // -> js
